--- a/IAmRich/Base.lproj/Main.storyboard
+++ b/IAmRich/Base.lproj/Main.storyboard
@@ -15,21 +15,39 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="I AM RICH" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BaS-9H-Tr4">
-                                <rect key="frame" x="114" y="143" width="186" height="48"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I AM RICH" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BaS-9H-Tr4">
+                                <rect key="frame" x="114" y="110.5" width="186" height="48"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
                                 <color key="textColor" red="0.89411764705882346" green="0.24705882352941178" blue="0.3529411764705882" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="diamond" translatesAutoresizingMaskIntoConstraints="NO" id="Pro-r9-Rzj">
-                                <rect key="frame" x="72" y="313" width="270" height="270"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="diamond" translatesAutoresizingMaskIntoConstraints="NO" id="Pro-r9-Rzj">
+                                <rect key="frame" x="124" y="365" width="166.5" height="166.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="166.5" id="69Z-Yw-NE5"/>
+                                    <constraint firstAttribute="height" constant="166.5" id="w5t-0S-XnW"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.14999999999999999" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="aura" translatesAutoresizingMaskIntoConstraints="NO" id="bP7-Ui-zv5" userLabel="Aura">
+                                <rect key="frame" x="-1" y="198" width="416" height="500"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.10588235294117647" green="0.10588235294117647" blue="0.18431372549019609" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="bP7-Ui-zv5" firstAttribute="width" secondItem="Pro-r9-Rzj" secondAttribute="width" multiplier="2.5" id="BA6-zC-UOv"/>
+                            <constraint firstItem="BaS-9H-Tr4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="I0C-PG-BVK"/>
+                            <constraint firstItem="BaS-9H-Tr4" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="0.3" id="OuW-A7-0J4"/>
+                            <constraint firstItem="bP7-Ui-zv5" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Pa8-da-Ntf"/>
+                            <constraint firstItem="Pro-r9-Rzj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jYY-CU-JNl"/>
+                            <constraint firstItem="bP7-Ui-zv5" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="t7b-4p-Bsc"/>
+                            <constraint firstItem="Pro-r9-Rzj" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="v1m-gu-WWf"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="aura" destination="bP7-Ui-zv5" id="Lgc-ir-5h0"/>
+                        <outlet property="theDiamon" destination="Pro-r9-Rzj" id="ojk-66-q3y"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -37,6 +55,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="diamond" width="343" height="251"/>
+        <image name="aura" width="500" height="500"/>
+        <image name="diamond" width="166.5" height="166.5"/>
     </resources>
 </document>
